[package]
name = "dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1"
windows = { version = "0.54", features = ["Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_Graphics_Gdi"] }
retour = { version = "0.4.0-alpha.2", features = ["static-detour"] }
image = "0.25"
